# Synthese_Image_TP2

./: CMakeLists.txt  README.md
doc/: tp2.md
shader/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.cpp
